@@ -1433,6 +1433,20 @@ public class BlockManager {
   }
 
   /**
+   * Remove all block invalidation tasks under this datanode UUID;
+   * used when a datanode registers with a new UUID and the old one
+   * is wiped.
+   */
+  void removeFromInvalidates(final DatanodeDescriptor datanode) throws IOException {
+    if (!namesystem.isPopulatingReplQueues()) {
+      return;
+    }
+    for(int sid: datanode.getSidsOnNode()){
+      invalidateBlocks.remove(sid);
+    }
+  }
+
+  /**
    * Mark the block belonging to datanode as corrupt
    * @param blk Block to be marked as corrupt
    * @param dn Datanode which holds the corrupt replica
@@ -4789,6 +4803,7 @@ public class BlockManager {
       invalidateBlocks.remove(entry.getValue());
       return 0;
     }
+    
     final List<Block> toInvalidate = invalidateBlocks.invalidateWork(dnDescriptor);
 
     if (toInvalidate == null) {
